--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
+  --ring: oklch(70.9% 0.00008 271.152);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
@@ -121,8 +121,8 @@ html {
 body {
   background: var(--pri-white);
   color: var(--pri-black);
-  font-family: Arial, Helvetica, sans-serif;
-  /* font-family: var(--font-poppins), Arial, Helvetica, sans-serif; */
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
 }
 
 button {
